--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "rokde/gsales-api-client",
+	"type": "library",
     "description": "SOAP Client for consumin gSales API",
+	"keywords": ["gsales", "api", "soap", "client", "php"],
     "license": "MIT",
     "authors": [
         {
@@ -9,7 +11,7 @@
         }
     ],
     "require": {
-	    "php": "5.4",
+	    "php": ">=5.4",
 	    "ext-soap": "*"
     },
 	"autoload": {
