--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
 	    "php": ">=5.4",
 	    "ext-soap": "*"
     },
+	"require-dev": {
+		"symfony/console": "v2.3.12"
+	},
 	"autoload": {
 		"psr-4": {
 			"Rokde\\": "src/rokde"
